DT-1496 Fixes mobile menu overflow

--- a/src/client/styles/landing-page/find-lenders-intro.scss
+++ b/src/client/styles/landing-page/find-lenders-intro.scss
@@ -1,9 +1,3 @@
-@media (max-width: 767px) {
-    body {
-        margin-top: 16vw;
-    }
-}
-
 @media screen and (min-width:768px){
   .parentContainer{
     width: 100%;
